<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pp_edit_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Title"
        android:textColor="?android:attr/colorEdgeEffect"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/pp_profile_image"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        app:civ_border_color="?android:attr/colorEdgeEffect"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pp_edit_profile_title"
        tools:ignore="MissingConstraints" />

    <!--    <ImageView-->
<!--        android:id="@+id/pp_profile_image"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="150dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:background="@drawable/me"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.508"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/pp_edit_profile_title"-->
<!--        tools:srcCompat="@tools:sample/avatars" />-->

    <ImageButton
        android:id="@+id/pp_profile_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="3dp"
        android:backgroundTint="#001C0A0A"
        app:layout_constraintBottom_toBottomOf="@+id/pp_profile_image"
        app:layout_constraintEnd_toEndOf="@+id/pp_profile_image"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pp_profile_image">

        <TextView
            android:id="@+id/pp_profile_name_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/profile_name"
            android:textColor="#D6D6D6"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pp_profile_name_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:hint="@string/profile_name_edit"
            android:inputType="textPersonName|text"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#D6D6D6"
            android:textColor="#D6D6D6" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_layout">

        <TextView
            android:id="@+id/pp_phone_number_header"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/phone_number"
            android:textColor="#D6D6D6"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pp_phone_number_info"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:hint="@string/phone_number_edit"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#D6D6D6"
            android:textColor="#D6D6D6" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_layout">

        <TextView
            android:id="@+id/pp_email_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/email"
            android:textColor="#D6D6D6"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pp_email_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:hint="@string/email_edit"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#D6D6D6"
            android:textColor="#D6D6D6" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bio_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_layout">

        <TextView
            android:id="@+id/pp_bio_header"
            android:layout_width="142dp"
            android:layout_height="17dp"
            android:layout_marginStart="5dp"
            android:text="@string/bio"
            android:textColor="#D6D6D6"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pp_bio_info"
            android:layout_width="337dp"
            android:layout_height="81dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:hint="@string/bio_edit"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/line5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#D6D6D6"
            android:textColor="#D6D6D6" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>