<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPage">

    <ImageButton
        android:id="@+id/ep_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00F8F2F2"
        android:backgroundTintMode="add"
        android:tint="#8F8F8F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/ep_header"
        android:layout_width="345dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:hint="Header"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ep_back_btn" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ep_update_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ep_header"
        app:layout_constraintVertical_bias="0.548">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ep_name_layout"
                android:layout_width="339dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone">

                <TextView
                    android:id="@+id/ep_first_name"
                    android:layout_width="137dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/box"
                    android:paddingStart="10sp"
                    android:paddingTop="5sp"
                    android:text="@string/ep_your_first_name"
                    android:textColor="#D6D6D6"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.057" />

                <EditText
                    android:id="@+id/ep_first_name_edit"
                    android:layout_width="137dp"
                    android:layout_height="44dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/ep_first_name"
                    app:layout_constraintEnd_toEndOf="@+id/ep_first_name"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/ep_last_name"
                    android:layout_width="137dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/box"
                    android:paddingStart="10sp"
                    android:paddingTop="5sp"
                    android:text="@string/ep_your_last_name"
                    android:textColor="#D6D6D6"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.056" />

                <EditText
                    android:id="@+id/ep_last_name_edit"
                    android:layout_width="137dp"
                    android:layout_height="44dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/ep_last_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/ep_last_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/ep_phone_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/box"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/ep_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/ep_your_phone"
                    android:textColor="#D6D6D6"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ep_phone_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:hint="@string/phone_number_edit"
                    android:inputType="phone"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ep_email_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/box"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/ep_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/ep_your_email"
                    android:textColor="#D6D6D6"
                    android:textStyle="bold"
                    tools:visibility="visible" />

                <EditText
                    android:id="@+id/ep_email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/ep_bio_edit"
                android:layout_width="325dp"
                android:layout_height="209dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/box"
                android:ems="10"
                android:gravity="clip_vertical"
                android:hint="@string/bio_edit"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#D6D6D6"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/ep_update_btn"
        android:layout_width="199dp"
        android:layout_height="45dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/black"
        android:text="@string/update_btn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>